Extension: Added support for root function that takes a custom base